# Tracer

./: .gitmodules  CMakeLists.txt  README.md
Tracer/: CMakeLists.txt  tracer.pro
Tracer/cli/: CMakeLists.txt
Tracer/cli/include/: Worker.h
Tracer/cli/src/: Worker.cpp  main.cpp
Tracer/gui/: CMakeLists.txt
Tracer/gui/forms/: WMainWindow.ui
Tracer/gui/include/: Util.h  WImage.h  WMainWindow.h
Tracer/gui/src/: Util.cpp  WImage.cpp  WMainWindow.cpp  main.cpp
Tracer/include/: Image.h  Worker.h  debug.h  scenes.h  tests.h
Tracer/include/geom/: Geom.h  GeomBase.h  Hit.h  Intersect.h  Mat3.h  Matrix.h  Optics.h  Ray.h  Shading.h  Transform.h  Util.h  Vec3.h  Vector.h  VectorBase.h
Tracer/include/math/: Constants.h  Pythagoras.h  Quadratic.h  Solver.h
Tracer/include/priv/rt/: SceneLoaderBase.h  SceneLoaderStringUtil.h
Tracer/include/rt/: Camera.h  Color.h  Refraction.h  RenderOptions.h  Renderer.h  SurfaceInfo.h  Types.h
Tracer/include/rt/BxDF/: IBxDF.h  LambertianBRDF.h  MirrorBRDF.h  PhongBRDF.h  Shading.h  SpecularReflectionBRDF.h  SpecularTransmissionBTDF.h
Tracer/include/rt/Camera/: FrustumCamera.h  ICamera.h  RenderLoop.h  SimpleCamera.h
Tracer/include/rt/Light/: DirectionalLight.h  IAreaLight.h  ILight.h  ILightSource.h  PointLight.h
Tracer/include/rt/Loader/: SceneLoader.h  SceneLoaderBase.h  SceneLoaderStringUtil.h
Tracer/include/rt/Material/: BSDF.h  BSDFdata.h  IMaterial.h  MatteMaterial.h  MirrorMaterial.h  OpaqueMaterial.h  TransparentMaterial.h
Tracer/include/rt/Object/: Cylinder.h  Disk.h  Group.h  IObject.h  Plane.h  Sphere.h  SurfaceInfo.h
Tracer/include/rt/Renderer/: DirectLightingRenderer.h  IRenderer.h  RenderLoop.h  RenderOptions.h  RenderUtils.h  WhittedRenderer.h
Tracer/include/rt/Sampler/: ISampler.h  Sampling.h  SimpleSampler.h
Tracer/include/rt/Scene/: Cylinder.h  Plane.h  Scene.h  Sphere.h  SurfaceInfo.h
Tracer/include/rt/Texture/: CheckedTexture.h  FlatTexture.h  ITexture.h  TexCoord.h
Tracer/libpt/: CMakeLists.txt
Tracer/libpt/src/BSDF/: DielectricLoader.cpp  DiffuseLoader.cpp  IBSDF.cpp  Mirror.cpp  MirrorLoader.cpp
Tracer/libpt/src/Renderer/: PathTracer.cpp
Tracer/libpt/src/Scene/: Object.cpp  ObjectLoader.cpp  SceneLoader.cpp
Tracer/libpt/src/Shape/: Cylinder.cpp  CylinderLoader.cpp  Disk.cpp  IShape.cpp  IShapeLoader.cpp  Plane.cpp  PlaneLoader.cpp  Sphere.cpp  SphereLoader.cpp
Tracer/librt/: CMakeLists.txt
Tracer/librt/include/geom/: Geom.h  Hit.h  Intersect.h  Optics.h  Ray.h  Shading.h  Transform.h
Tracer/librt/include/math/: Logical.h  Solver.h
Tracer/librt/src/BxDF/: IBxDF.cpp  LambertianBRDF.cpp  MirrorBRDF.cpp  PhongBRDF.cpp  SpecularReflectionBRDF.cpp  SpecularTransmissionBTDF.cpp
Tracer/librt/src/Camera/: FrustumCamera.cpp  ICamera.cpp  SimpleCamera.cpp
Tracer/librt/src/Light/: DiffuseAreaLight.cpp  DirectionalLight.cpp  ILight.cpp  PointLight.cpp
Tracer/librt/src/Loader/: SceneLoader.cpp  SceneLoaderBase.cpp  SceneLoaderLight.cpp  SceneLoaderMaterial.cpp  SceneLoaderObject.cpp  SceneLoaderOptions.cpp  SceneLoaderText.cpp  SceneLoaderTexture.cpp
Tracer/librt/src/Material/: IMaterial.cpp  OpaqueMaterial.cpp  TransparentMaterial.cpp
Tracer/librt/src/Object/: Cylinder.cpp  Disk.cpp  Group.cpp  IObject.cpp  Plane.cpp  Sphere.cpp  SurfaceInfo.cpp
Tracer/librt/src/Renderer/: BaseRenderer.cpp  DirectLightingRenderer.cpp  IRenderer.cpp  PathTracingRenderer.cpp  RenderContext.cpp  RenderUtils.cpp  WhittedRenderer.cpp
Tracer/librt/src/Sampler/: SimpleSampler.cpp
Tracer/librt/src/Scene/: Scene.cpp
Tracer/librt/src/Texture/: CheckedTexture.cpp
Tracer/librtbase/: CMakeLists.txt
Tracer/librtbase/include/Util/: Worker.h
Tracer/librtbase/include/geom/: Bounds.h  Geom.h  Hit.h  Intersect.h  Optics.h  Ray.h  Shading.h  Transform.h  Util.h
Tracer/librtbase/include/math/: Constants.h  Logical.h  Solver.h
Tracer/librtbase/src-util/: Worker.cpp
Tracer/librtbase/src/Camera/: FrustumCamera.cpp  SimpleCamera.cpp
Tracer/librtbase/src/Loader/: SceneLoaderBase.cpp  SceneLoaderOptions.cpp
Tracer/librtbase/src/Renderer/: IRenderer.cpp  RenderContext.cpp  RenderOptionsLoader.cpp
Tracer/librtbase/src/Sampler/: Sampling.cpp
Tracer/librtbase/src/Scene/: IScene.cpp
Tracer/librtbase/src/Texture/: CheckedTexture.cpp  CheckedTextureLoader.cpp  FlatTexture.cpp  FlatTextureLoader.cpp  ITexture.cpp  ITextureLoader.cpp
Tracer/libutil/: CMakeLists.txt
Tracer/libutil/include/: Debug.h  Image.h  ValueObserver.h
Tracer/libutil/src/: Debug.cpp
Tracer/pt/: CMakeLists.txt
Tracer/pt-scenes/: cornell-shapes.xml  cornell-spheres.xml  cornell.xml
Tracer/pt/docs/: debug.txt
Tracer/pt/src/: main.cpp
Tracer/pt/src/BSDF/: Dielectric.cpp  Diffuse.cpp  IBSDFLoader.cpp
Tracer/pt/src/Renderer/: PathTracer.cpp
Tracer/pt/src/Scene/: Object.cpp  ObjectLibrary.cpp  ObjectLoader.cpp  Scene.cpp  SceneLoader.cpp
Tracer/pt/src/Shape/: Cylinder.cpp  CylinderLoader.cpp  DiskLoader.cpp  IShape.cpp  IShapeLoader.cpp  IntersectionInfo.cpp  Plane.cpp  PlaneLoader.cpp  Sphere.cpp  SphereLoader.cpp
Tracer/ptcli/: CMakeLists.txt
Tracer/ptcli/src/: main.cpp
Tracer/scenes/: scene_1.xml  scene_2.xml  scene_3.xml  scene_4.xml  scene_arealight.xml  scene_box.xml  scene_objects.xml  scene_spheres.xml  scene_templates.xml  scene_text.xml
Tracer/scripts/: test_sampling.m  test_sphere.m
Tracer/src/: Image.cpp  Worker.cpp  debug.cpp  main.cpp  scene_1.cpp  scene_2.cpp  scene_3.cpp  scene_4.cpp  scene_cylinder.cpp  scene_text.cpp  test_camera.cpp  test_intersect.cpp  test_matrix.cpp
Tracer/src/rt/: Camera.cpp  Color.cpp  Refraction.cpp  Renderer.cpp  SceneLoader.cpp  SceneLoaderBase.cpp  SceneLoaderLight.cpp  SceneLoaderMaterial.cpp  SceneLoaderObject.cpp  SceneLoaderOptions.cpp  SceneLoaderText.cpp  SceneLoaderTexture.cpp
Tracer/src/rt/BxDF/: IBxDF.cpp  LambertianBRDF.cpp  MirrorBRDF.cpp  PhongBRDF.cpp  SpecularReflectionBRDF.cpp  SpecularTransmissionBTDF.cpp
Tracer/src/rt/Camera/: FrustumCamera.cpp  ICamera.cpp  (+1 more)
Tracer/tests/: CMakeLists.txt
Tracer/tests/src/: test_sampling.cpp  test_sphere.cpp
(+135 files in other folders)
